<resources>
    <string name="app_name">Arhepp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login View -->
    <string name="login_username">Username</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_signUp">Sign Up</string>
    <string name="login_reset_password">Reset Password</string>
    <string name="login_signIn_google">Sign In with Google</string>
    <string name="login_forgot_password">I have forgotten my password</string>
    <string name="login_create_account">Sign up here</string>
    <string name="login_no_account">You do not have an account?</string>
    <string name="login_enter_app">ENTER THE APP</string>
    <string name="login_go_to_login">Go back to Login</string>

    <!-- Home Activity -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_bottom_home">Home</string>
    <string name="navigation_bottom_explorer">Explorer</string>
    <string name="navigation_bottom_recording">Recording</string>
    <string name="navigation_bottom_favorites">Favorites</string>
    <string name="navigation_bottom_profile">Profile</string>
    <string name="options_menu_log_out">Log out</string>


</resources>