<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ripple_login"
    android:fitsSystemWindows="true"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:elevation="4dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary"/>

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/ic_arhepp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center|top"/>

        </FrameLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary_light"
        app:cardElevation="8dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_enter_app"
                android:paddingTop="20dp"
                android:textColor="@color/text_color"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_email"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_dark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_email"
                        android:background="@color/primary_dark"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_password"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password"
                        android:background="@color/primary_dark"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_sign_in"
                android:background="@color/secondary"
                android:textColor="@color/text_color"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/buttonLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_signIn_google"
                android:layout_marginTop="5dp"
                android:layout_marginRight="22dp"
                android:layout_marginLeft="22dp"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/buttonLogInFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="29dp"
                android:layout_marginLeft="29dp"/>

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/login_forgot_password"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingBottom="30dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_no_account"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_create_account"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:textColor="@color/text_color"
            android:textStyle="bold"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>